# witx-codegen

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
example-output/: assemblyscript.ts  cpp.h  markdown.md  overview.txt  rust.rs  wasi-crypto.wit  zig.zig
src/: astype.rs  error.rs  generator.rs  html.rs  lib.rs  main.rs  pretty_writer.rs
src/assemblyscript/: common.rs  function.rs  header.rs  mod.rs  struct.rs  tuple.rs  union.rs
src/cpp/: common.rs  function.rs  header.rs  mod.rs  struct.rs  tuple.rs  union.rs
src/doc/: common.rs  function.rs  mod.rs  struct.rs  tuple.rs  union.rs
src/overview/: common.rs  function.rs  mod.rs  struct.rs  tuple.rs  union.rs
src/rust/: common.rs  function.rs  header.rs  mod.rs  struct.rs  tuple.rs  union.rs
src/weet/: common.rs  function.rs  header.rs  mod.rs  struct.rs  tuple.rs  union.rs
src/zig/: common.rs  function.rs  header.rs  mod.rs  struct.rs  tuple.rs  union.rs
test/: test_module.witx  wasi_ephemeral_crypto_symmetric.witx
tests/: integration.rs  test_module.witx  wasi_ephemeral_crypto_common.witx  wasi_experimental_http.witx
