[package]
name = "as-witx"
version = "0.1.1"
authors = ["Frank Denis <github@pureftpd.org>"]
edition = "2018"
description = "WITX code generator for AssemblyScript (WebAssembly)"
readme = "README.md"
keywords = ["webassembly", "assemblyscript", "wasi", "witx", "wasm"]
repository = "https://github.com/jedisct1/as-witx"
homepage = "https://github.com/jedisct1/as-witx"
categories = ["wasm"]
license = "ISC"

[dependencies]
clap = { version = "2.33.1", features = ["wrap_help"] }
witx = "0.8.5"
