[package]
name = "witx-codegen"
version = "0.11.2"
description = "WITX code generator for WebAssembly guest modules."
authors = ["Frank Denis <github@pureftpd.org>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/jedisct1/witx-codegen"
homepage = "https://github.com/jedisct1/witx-codegen"
categories = ["wasm", "api-bindings", "web-programming"]
keywords = ["witx", "webassembly", "wasm", "generator", "bindgen"]
readme = "README.md"

[dependencies]
anyhow = "1.0.51"
convert_case = "0.5.0"
structopt = "0.3.25"
strum = "0.24.0"
strum_macros = "0.24.0"
witx = { package = "witnext", version = "0.10.0-beta3" }

[package.metadata.deb]
extended-description = """\
A code generator for WITX (WebAssembly interface description language for WASI).

WITX-CodeGen generates types and function prototypes for various languages targeting
WebAssembly, from a common WITX interface description.
"""
assets = [
  ["target/release/witx-codegen", "usr/bin/", "755"],
  ["README.md", "usr/share/doc/witx-codegen/README.md", "644"]
]
section = "development"
depends = "$auto"
priority = "optional"
